# liturgical

./: Cargo.toml  README.md
.github/workflows/: lint.yml  test.yml  tests.yml
src/: lib.rs  main.rs
src/western/: advent.rs  easter.rs  error.rs  mod.rs
