[package]
edition = "2021"
name = "liturgical"
description = "Calculates the Christian liturgical calendar"
license = "Apache-2.0"
authors = ["Grahame Bowland <grahame@oreamnos.com.au>"]
homepage = "https://github.com/grahame/liturgical/"
repository = "https://github.com/grahame/liturgical/"
documentation = "https://docs.rs/liturgical"
readme = "README.md"
version = "0.2.0"

[dependencies]
chrono = "0.4.19"
